--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "22.17.0"
+  },
   "name": "major-project",
   "version": "1.0.0",
   "main": "index.js",
@@ -20,7 +23,9 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
+    "marked": "^16.0.0",
     "method-override": "^3.0.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
